--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
 					<h3></h3>
 					<br>
 					<p>
-						<small>Created by <a href="http://www.nuageprive.fr">Camel Aissani</a> / <a href="https://twitter.com/camelaissani">@camelaissani</a></small>
+						<small>Created by Mahesh Gareja</small>
 						<br>
-						<small>Inspired by <a href="https://twitter.com/kunklejr">Jeff Kunkle</a></small>
 					</p>
 				</section>
 				<section>
