--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
 					<small>source <a href="htttp://nodejs.org">nodejs.org</a></small>
 				</section>
 				<section>
-						<h1>Problematic</h1>
+						<h1>Why Node.JS</h1>
 				</section>
 				<section>
-						<h2>I/O Latency</h2>
-						<img src="images/iolatency.png">
 						<br>
-						<small>Most of the the time the process waits for I/O (memory, disk, network)</small>
+                        <small>Provide Easy Way to Build Scalable
+                            Network Programs</small>
+                    
+						<!-- <small>Most of the the time the process waits for I/O (memory, disk, network)</small> -->
 				</section>
 				<section>
 						<h2>Conventional solution</h2>
