--- a/index.html
+++ b/index.html
@@ -70,30 +70,27 @@
 						<br>
                         <small>Provide Easy Way to Build Scalable
                             Network Programs</small>
+                            <br>
+                            <small>Lightweight and Efficient </small>
+                            <br>
+                            <small>Can Handle Thousands of Concurrent Connections with Minimal Overhead on a Single Process. </small>
                     
 						<!-- <small>Most of the the time the process waits for I/O (memory, disk, network)</small> -->
 				</section>
 				<section>
-						<h2>Conventional solution</h2>
+						<h2>Run JavaScript on Server Side</h2>
 				</section>
 				<section>
-						<h3>Multi-threading</h3>
+						<h3>JavaScript at Server Side</h3>
 		                <ul>
-						    <li>Context switching overhead</li>
-						    <li>Memory consumption</li>
+						    <li>Allows to run Javascript code in the backend,
+                                outside a browser.</li>
+						    <li>Using Google’s V8 Engine</li>
 							<li>Manage concurrency</li>
-							<li>Dead lock</li>
+							<li>Has Runtime environments and NPM library. </li>
 						</ul>
 						<br>
 						<br>
-						<h3>Multi processes</h3>
-						<ul>
-							<li>High memory usage</li>
-							<li>Process scheduling overhead</li>
-						</ul>
-						<br>
-						<br>
-						and always waiting I/O...
 				</section>
 				<section>
 						<h2>Node.JS answer</h2>
