--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
 				</section>
 				<section>
 						<br>
-                        <small>Provide Easy Way to Build Scalable
-                            Network Programs</small>
+                        <ul>
+                        <li>Provide Easy Way to Build Scalable
+                            Network Programs</li>
                             <br>
-                            <small>Lightweight and Efficient </small>
+                            <li>Lightweight and Efficient </li>
                             <br>
-                            <small>Can Handle Thousands of Concurrent Connections with Minimal Overhead on a Single Process. </small>
-                    
+                            <li>Can Handle Thousands of Concurrent Connections with Minimal Overhead on a Single Process. </li>
+                        </ul>
 						<!-- <small>Most of the the time the process waits for I/O (memory, disk, network)</small> -->
 				</section>
 				<section>
