--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 				</section>
 				<section>
 						<h3>JavaScript at Server Side</h3>
+						<img src="images/fullStack.png">
 		                <ul>
 						    <li>Allows to run Javascript code in the backend,
                                 outside a browser.</li>
